<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">BICIUnidos</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="bienvenido">¡Bienvenido a BICI Unidos!</string>
    <string name="title_activity_main">Información</string>
    <string name="nombre">Frank Sinatra</string>
    <string name="fecha">Unido el 3/02/2015</string>
    <string name="amigos">10 amigos</string>
    <string name="titulo">Kilómetros</string>
    <string name="numKim">0</string>
    <string name="desTime">Esta semana</string>
    <string name="titulo1">Caravanas</string>
    <string name="numCar">5</string>
    <string name="desCar">Inicio de uso</string>
    <string name="titulo2">Ritmo</string>
    <string name="numRim">0:0</string>
    <string name="desRim">(avg/km)</string>
    <string name="titulo3">Calorías</string>
    <string name="numCal">0</string>
    <string name="desCal">(net)</string>
    <string name="titulo4">Pedalazos</string>
    <string name="numPed">0</string>
    <string name="desPed">(avg/min)</string>
    <string name="titulo5">Mis rutas</string>
    <string name="tituloH">Home</string>
    <string name="tituloB">Bike</string>
    <string name="tituloHa">Alquiler</string>
    <string name="title_activity_alquiler">Alquiler</string>
    <string name="titulo6">Estado:</string>
    <string name="titulo7">Observación</string>
    <string name="Opc1">Bueno</string>
    <string name="Opc2">Regular</string>
    <string name="Opc3">Malo</string>
    <string name="Btn1">Registrar</string>
    <string name="title_activity_temporizador">Temporizador</string>
    <string name="title_activity_recibidor_alarma">Recordatorio</string>
    <string name="alarm">Es hora de entregar la bicicleta!!</string>
    <string name="btnAlar">Entendido!</string>
    <string name="cancelar">Cancelar</string>
    <string name="btnCancel">Terminar alquiler</string>
    <string name="title_activity_sms">Enviar SMS</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="title_activity_smsreceiver">SMS recibido</string>
    <string name="title_activity_map">A rodar!</string>
    <string name="title_activity_login">Iniciar sesion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Iniciar sesion</string>
    <string name="action_sign_in_short">Iniciar sesion</string>
    <string name="action_forgot_password">Recuperar contrena</string>
    <string name="login_progress_signing_in">Iniciando sesion…</string>
    <string name="error_invalid_email">Esta direccion de email no es valida</string>
    <string name="error_invalid_password">Contrasena muy corta</string>
    <string name="error_incorrect_password">Contrasena incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="action_sign_in">Sign in</string>
    <string name="direccion">Direccion</string>
    <string name="mar_inicio">Inicio</string>
    <string name="mar_fin">Fin</string>
    <string name="mar_intermedio">Intermedio</string>
    <string name="mar_tipo">Inicio</string>
    <string name="title_activity_formulario">Perfil</string>
    <string name="chronoTxt"></string>

</resources>
