<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/TableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#49B9EB"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TableRow
        android:id="@id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#49B9EB" >

        <GridLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="2.0dip" android:layout_weight="1.0" android:columnCount="3">

            <ImageButton
                android:id="@id/support"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:background="@layout/round_button"
                android:maxHeight="50dp"
                android:maxWidth="50dp"
                android:scaleType="centerInside"
                android:src="@drawable/androide" />

            <TextView
                android:id="@id/textView1"
                android:layout_column="1"
                android:layout_gravity="top|left|center"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="8dp"
                android:layout_row="0"
                android:text="@string/nombre"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#ffffffff" />

            <Button
                android:id="@id/btnAmigos"
                android:layout_width="wrap_content"
                android:layout_height="35.0dip"
                android:layout_column="2"
                android:layout_gravity="right|center"
                android:layout_marginLeft="0.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="0.0dip"
                android:layout_row="0"
                android:background="#49B9EB"
                android:text="@string/amigos"
                android:textColor="@color/white"
                android:textColorLink="#ffffffff"
                android:typeface="normal" />

        </GridLayout>
    </TableRow>
    <TableRow android:id="@id/tableRow2" android:background="#fff7f3f0" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <GridLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:layout_weight="1.0" android:columnCount="1">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff666666" android:layout_gravity="top|left|center" android:id="@id/textView3" android:layout_marginLeft="13.0dip" android:text="@string/titulo" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff666666" android:layout_gravity="left" android:id="@id/textView5" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:text="@string/desTime" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff666666" android:layout_gravity="top|right|center" android:id="@id/textView6" android:layout_marginLeft="0.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="13.0dip" android:layout_column="0" android:text="@string/titulo1" android:layout_row="0" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="50.0sp" android:textStyle="bold" android:textColor="#ff666666" android:layout_gravity="right" android:id="@id/textCara" android:layout_marginTop="0.0dip" android:layout_marginRight="40.0dip" android:layout_column="0" android:text="@string/numCar" android:layout_row="1" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff666666" android:layout_gravity="right" android:id="@id/textView8" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:layout_column="0" android:text="@string/desCar" android:layout_row="1" />

            <TextView
                android:id="@id/textView4"
                android:layout_column="0"
                android:layout_gravity="top|left|center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="0.0dip"
                android:layout_row="1"
                android:text="@string/numKim"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ff666666"
                android:textSize="50.0sp"
                android:textStyle="bold" />

        </GridLayout>
    </TableRow>
    <TableRow android:id="@id/tableRow3" android:background="#fff7f3f0" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <GridLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:columnCount="4">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff666666" android:layout_gravity="top|left|center" android:id="@id/textView9" android:layout_marginLeft="20.0dip" android:layout_column="1" android:text="@string/titulo2" android:layout_row="1" />

            <TextView
                android:id="@id/textView10"
                android:layout_column="1"
                android:layout_gravity="top|left|center"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="30.0dip"
                android:layout_row="1"
                android:text="@string/numRim"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ff666666"
                android:textSize="40.0sp"
                android:textStyle="bold" />

            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff666666" android:layout_gravity="left" android:id="@id/textView11" android:layout_marginLeft="15.0dip" android:layout_marginTop="55.0dip" android:layout_column="1" android:text="@string/desRim" android:layout_row="1" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff666666" android:layout_gravity="top" android:id="@id/textView12" android:layout_marginLeft="35.0dip" android:layout_column="2" android:text="@string/titulo3" android:layout_row="1" />

            <TextView
                android:id="@id/textView13"
                android:layout_column="2"
                android:layout_gravity="center"
                android:layout_marginLeft="29dp"
                android:layout_marginTop="15dp"
                android:layout_row="1"
                android:text="@string/numCal"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ff666666"
                android:textSize="40.0sp"
                android:textStyle="bold" />

            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff666666" android:layout_gravity="left" android:id="@id/textView14" android:layout_marginLeft="60.0dip" android:layout_marginTop="55.0dip" android:layout_column="2" android:text="@string/desCal" android:layout_row="1" />

            <TextView
                android:id="@id/textView16"
                android:layout_column="3"
                android:layout_gravity="right"
                android:layout_marginLeft="0.0dip"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30.0dip"
                android:layout_row="1"
                android:text="@string/numPed"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ff666666"
                android:textSize="40.0sp"
                android:textStyle="bold" />

            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff666666" android:layout_gravity="right" android:id="@id/textView17" android:layout_marginLeft="0.0dip" android:layout_marginTop="55.0dip" android:layout_marginRight="18.0dip" android:layout_column="3" android:text="@string/desPed" android:layout_row="1" />

            <TextView
                android:id="@id/textView15"
                android:layout_column="3"
                android:layout_gravity="top|right|center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10.0dip"
                android:layout_row="1"
                android:text="@string/titulo4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#ff666666" />

        </GridLayout>
    </TableRow>
    <TableRow android:id="@id/tableRow4" android:background="#fff7f3f0" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="#ff666666" android:id="@id/textView18" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="13.0dip" android:text="@string/titulo5" />
        <Gallery android:id="@id/gallery1" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    </TableRow>
</TableLayout>