<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioTipMar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <RadioButton
            android:id="@+id/radTipMar0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/mar_inicio" />

        <RadioButton
            android:id="@+id/radTipMar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mar_fin" />

        <RadioButton
            android:id="@+id/radTipMar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mar_intermedio" />
    </RadioGroup>

</LinearLayout>